src/commands/config/snapshots/wt__commands__config__alias__tests__format_entry_pipeline.snap
---
source: src/commands/config/alias.rs
expression: out.ansi_strip()
---
deploy (project)
pipeline: install; build, lint
  # install
  npm install
  # build
  npm run build
  # lint
  npm run lint
