src/commands/config/snapshots/wt__commands__config__alias__tests__format_entry_show_pipeline.snap
---
source: src/commands/config/alias.rs
expression: out.ansi_strip()
---
○ Alias deploy (project):
  # install
  npm install
  # build
  npm run build
  # lint
  npm run lint
