src/commands/config/snapshots/wt__commands__config__alias__tests__format_entry_show_single.snap
---
source: src/commands/config/alias.rs
expression: out.ansi_strip()
---
○ Alias greet (user):
  echo {{ branch }}
