src/commands/config/snapshots/wt__commands__config__alias__tests__format_entry_single_command.snap
---
source: src/commands/config/alias.rs
expression: out.ansi_strip()
---
greet (user)
(single command)
  echo {{ branch }}
